fix(system): Fixed respawn location. Added contribution guidelines.